assets/styles/dashboard.css
.dashboard {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
	color: #333;
	border-top: 1px solid #ddd;
	padding: 25px 0 75px;
	position: relative;
}

.dashboard > .wrapp {
	width: 550px;
	float: left;
	padding: 0 0 0 25px;
}

.dashboard .tip-big {
	margin: 20px 0 0;
}

.dashboard .tip-big h2 {
	font-size: 32px;
	font-weight: lighter;
}

.dashboard .tip-big p {
	font-size: 20px;
	font-weight: lighter;
	color: #999;
}

.dashboard .list {
	margin: 35px 0 40px;
	border-bottom: 1px solid #DDD;
}

.dashboard .list li {
	border-top: 1px solid #DDD;
	list-style: none;
	border-left: 1px solid #fff;
	border-right: 1px solid #fff;
	position: relative;
}
.dashboard .list li:hover {
	border-left: 1px solid #EFEFEF;
	border-right: 1px solid #EFEFEF;
	background: url(/images/shared/layout/ui-button-white.png) center repeat-x;
}

.dashboard .list li#add-content:hover {
	background: none;
	border-left: 1px solid #fff;
	border-right: 1px solid #fff;
}

.dashboard .list li .link {
	padding: 17px 0 24px 80px;
	display: block;
	text-decoration: none;
}

.dashboard .list li .link .icon {
	background: url(/images/shared/dashboard/icons.png) no-repeat 0 0 #c02926;
	width: 51px;
	height: 51px;
	display: block;
	position: absolute;
	left: 10px;
	top: 13px;
}

.dashboard .list li#photos .icon {
	background-position: 0 -900px;
}

.dashboard .list li#social .icon {
	background-position: 0 -332px;
}

.dashboard .list li#address .icon {
	background-position: 0 -616px;
}

.dashboard .list li#contact .icon {
	background-position: 0 -758px;
}

.dashboard .list li#feed .icon {
	background-position: 0 -1042px;
}

.dashboard .list li#categories .icon {
	background-position: 0 -190px;
}

.dashboard .list li#add-content .icon {
	background-position: 0 -474px;
}

.dashboard .list li#photos:hover .icon {
	background-position: 0 -829px;
}

.dashboard .list li#social:hover .icon {
	background-position: 0 -261px;
}

.dashboard .list li#address:hover .icon {
	background-position: 0 -545px;
}

.dashboard .list li#contact:hover .icon {
	background-position: 0 -687px;
}

.dashboard .list li#feed:hover .icon {
	background-position: 0 -971px;
}

.dashboard .list li#categories:hover .icon {
	background-position: 0 -119px;
}

.dashboard .list li .arrow {
	background: url(/images/shared/dashboard/icons.png) no-repeat 0 -74px;
	width: 15px;
	height: 26px;
	display: block;
	position: absolute;
	right: 10px;
	top: 26px;
}

.dashboard .list li:hover .arrow {
	background-position: 0 -45px;
	background-color: #c02926;
}

.dashboard .list li .arrow.open, .dashboard .list li:hover .arrow.open {
	background-position: 0 0;
	width: 28px;
	background-color: #fff;
	right: 6px;
}

.dashboard .list li .link h3 {
	color: #c02926;
	font-size: 22px;
	font-weight: lighter;
}

.dashboard .list li .link small {
	color: #888;
	display: block;
	font-size: 12px;
	line-height: 12px;
}

.dashboard .domain {
	font-size: 18px;
	color: #666;
	text-align: center;
}

.dashboard .domain a {
	color: #c02926;
	font-size: 28px;
}

.placeholder-links {
	margin: 0 0 25px 80px;
}

.placeholder-links a {
	color: #6e6e6e;
	text-decoration: none;
	font-size: 17px;
	display: inline-block;
	text-align: center;
	margin: 0 10px;
}

.placeholder-links a img {
	background-color: #c02926;
	display: block;
	margin: 0 auto 10px;
}

